tests/errors/block_filter_not_boolean.dang
# Test: filter block must return Boolean!

numbers: [Int!]! = [1, 2, 3]

# ERROR: block must return Boolean! for filter
result: [Int!]! = numbers.filter { x => x * 2 }
